// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PlanConfigurer getFormJobs converts to jobs 1`] = `
Immutable.List [
  Object {
    "convertIn": [Function],
    "convertOut": [Function],
    "default": "",
    "in": "name",
    "out": "name",
    "validate": [Function],
  },
  Object {
    "convertIn": [Function],
    "convertOut": [Function],
    "default": undefined,
    "in": "config",
    "out": "config",
    "validate": undefined,
  },
  Object {
    "convertIn": [Function],
    "convertOut": [Function],
    "default": "",
    "in": "config.configFile",
    "out": "config.configFile",
    "validate": undefined,
  },
  Object {
    "convertIn": [Function],
    "convertOut": [Function],
    "default": false,
    "in": "config.modifiedOnly",
    "out": "config.modifiedOnly",
    "validate": undefined,
  },
  Object {
    "convertIn": [Function],
    "convertOut": [Function],
    "default": true,
    "in": "config.watch",
    "out": "config.watch",
    "validate": undefined,
  },
  Object {
    "convertIn": [Function],
    "convertOut": [Function],
    "default": undefined,
    "in": "config.binary",
    "out": "config.binary",
    "validate": undefined,
  },
  Object {
    "convertIn": [Function],
    "convertOut": [Function],
    "default": undefined,
    "in": "config.environmentVariables",
    "out": "config.environmentVariables",
    "validate": undefined,
  },
  Object {
    "convertIn": [Function],
    "convertOut": [Function],
    "default": undefined,
    "in": "stager",
    "out": "stager",
    "validate": undefined,
  },
  Object {
    "convertIn": [Function],
    "convertOut": [Function],
    "default": "integrated",
    "in": "stager.type",
    "out": "stager.expressionValue",
    "validate": undefined,
  },
  Object {
    "convertIn": [Function],
    "convertOut": [Function],
    "default": null,
    "in": "stager.host",
    "out": "stager.caseValue",
    "validate": undefined,
  },
  Object {
    "convertIn": [Function],
    "convertOut": [Function],
    "default": undefined,
    "in": "packageInfos",
    "out": "packageInfos",
    "validate": undefined,
  },
]
`;

exports[`PlanConfigurer getFormJobs converts to jobs taking value in account 1`] = `
Immutable.List [
  Object {
    "convertIn": [Function],
    "convertOut": [Function],
    "default": "",
    "in": "name",
    "out": "name",
    "validate": [Function],
  },
  Object {
    "convertIn": [Function],
    "convertOut": [Function],
    "default": undefined,
    "in": "config",
    "out": "config",
    "validate": undefined,
  },
  Object {
    "convertIn": [Function],
    "convertOut": [Function],
    "default": "",
    "in": "config.configFile",
    "out": "config.configFile",
    "validate": undefined,
  },
  Object {
    "convertIn": [Function],
    "convertOut": [Function],
    "default": false,
    "in": "config.modifiedOnly",
    "out": "config.modifiedOnly",
    "validate": undefined,
  },
  Object {
    "convertIn": [Function],
    "convertOut": [Function],
    "default": true,
    "in": "config.watch",
    "out": "config.watch",
    "validate": undefined,
  },
  Object {
    "convertIn": [Function],
    "convertOut": [Function],
    "default": undefined,
    "in": "config.binary",
    "out": "config.binary",
    "validate": undefined,
  },
  Object {
    "convertIn": [Function],
    "convertOut": [Function],
    "default": undefined,
    "in": "config.binary.expressionValue",
    "out": "config.binary.expressionValue",
    "validate": undefined,
  },
  Object {
    "convertIn": [Function],
    "convertOut": [Function],
    "default": undefined,
    "in": "config.binary.caseValue",
    "out": "config.binary.caseValue",
    "validate": undefined,
  },
  Object {
    "convertIn": [Function],
    "convertOut": [Function],
    "default": undefined,
    "in": "config.binary.caseValue.a",
    "out": "config.binary.caseValue.a",
    "validate": undefined,
  },
  Object {
    "convertIn": [Function],
    "convertOut": [Function],
    "default": undefined,
    "in": "config.environmentVariables",
    "out": "config.environmentVariables",
    "validate": undefined,
  },
  Object {
    "convertIn": [Function],
    "convertOut": [Function],
    "default": undefined,
    "in": "config.environmentVariables.0",
    "out": "config.environmentVariables.0",
    "validate": undefined,
  },
  Object {
    "convertIn": [Function],
    "convertOut": [Function],
    "default": undefined,
    "in": "config.environmentVariables.1",
    "out": "config.environmentVariables.1",
    "validate": undefined,
  },
  Object {
    "convertIn": [Function],
    "convertOut": [Function],
    "default": undefined,
    "in": "stager",
    "out": "stager",
    "validate": undefined,
  },
  Object {
    "convertIn": [Function],
    "convertOut": [Function],
    "default": "integrated",
    "in": "stager.type",
    "out": "stager.expressionValue",
    "validate": undefined,
  },
  Object {
    "convertIn": [Function],
    "convertOut": [Function],
    "default": null,
    "in": "stager.host",
    "out": "stager.caseValue",
    "validate": undefined,
  },
  Object {
    "convertIn": [Function],
    "convertOut": [Function],
    "default": undefined,
    "in": "packageInfos",
    "out": "packageInfos",
    "validate": undefined,
  },
]
`;
